[web] fixed `click for more details` being white and visible

--- a/code/web/src/app.less
+++ b/code/web/src/app.less
@@ -225,9 +225,8 @@ input {
         background-color: @node-highlight;
       }
 
-      &:hover {
-        color: black;
-        .node-main {
+      &.non-upscaled:hover {
+        .node-main, .click-hint {
           background-color: @node-highlight-hover;
         }
       }
@@ -240,8 +239,10 @@ input {
         background-color: @node-normal-hover;
       }
       .click-hint {
+        color: black;
         height: 1.4em;
         background-color: @node-normal-hover;
+        .transition(height .2s ease-in-out, width .2s ease-in-out, color .2s ease-in-out);
       }
     }
 
@@ -251,6 +252,7 @@ input {
     }
 
     .click-hint {
+      color: transparent;
       overflow: hidden;
       height: 0;
       // opacity: 0;
@@ -265,7 +267,7 @@ input {
       border-bottom-right-radius: 0.5em;
       box-sizing: border-box;
       padding: 0 1%;
-      .transition(height .2s ease-in-out, width .2s ease-in-out);
+      .transition(height .2s ease-in-out, width .2s ease-in-out, color .2s ease-in-out);
     }
 
     .click-hint-wrapper {
